--- a/Project.toml
+++ b/Project.toml
@@ -1,4 +1,4 @@
-name = "StateSpaceModels"
+name = "StateSpaceCPG"
 uuid = "99342f36-827c-5390-97c9-d7f9ee765c78"
 authors = ["raphaelsaavedra <raphael.saavedra93@gmail.com>, guilhermebodin <guilherme.b.moraes@gmail.com>, mariohsouto"]
 version = "0.3.3"
